# Cryptography

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
main/: CMakeLists.txt  CryptographyMath.h  GlobalTasks  crypto.h  main_crypto.cpp  other_funcs.cpp
main/algebraInterfaces/: IAddition.h  IAlgebra.h  ISummarize.h  SharedInheritPtr.h
main/complexNumbers/: Complex.h  complex_numbers.h
main/finiteField/: ConversionToFieldElements.cpp  FieldElement.h  FiniteField.h  field_element.h  finite_field.h  polynom_mod_2.h  polynom_modulus.h  polynomial.h  polynomial_mod_2.h  polynomial_modulus.h
main/iovector/: iovector.h
main/jacobySymbol/: jacobySymbol.cpp  propertiesOfNumbers.cpp
main/monicPolynomial/: Polynom.h
main/numberPropertiesAlgorithms/: JacobySymbol.cpp  PropertiesOfNumbers.cpp  PropertiesOfNumbers.h  jacobySymbol.cpp  propertiesOfNumbers.cpp
main/polymorphicTypeCasting/: SharedPolymPtr.h
main/polynom/: polynom.h  polynomial.h
main/vectorExtraFuncs/: OutputVector.h  VectorArithmetics.h
main/vector_extra/: vector_arithmetics.h
tests/: CMakeLists.txt
tests/finiteField_tests/: CMakeLists.txt  main.cpp  polynomial_tests.cpp
